# ephapax

./: .editorconfig  .gitignore  .hypatia-ignore  .tool-versions  0-AI-MANIFEST.a2ml  AFFIRMATION.adoc  BOOTSTRAP-TEST-RESULTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Cargo.toml  DYADIC-DESIGN.md  DYADIC-TYPE-CHECKER-COMPLETE.md  ECOSYSTEM.scm  ENHANCEMENTS-STATUS.md  EPHAPAX-PROVEN-INTEGRATION.md  EXPLAINME.adoc  IMPLEMENTATION-PLAN.md  Justfile  LANGUAGE-GUIDE.md  LICENSE  LICENSE.txt  LSP-GUIDE.md  META.scm  MILESTONES.md  PROOF-NEEDS.md  QUICK-STATUS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  ROADMAP.md  RUST-SPARK-STANCE.adoc  SECURITY.md  SESSION-SUMMARY-2026-02-07.md  STATE.scm  (+28 more)
.clusterfuzzlite/: Dockerfile  project.yaml
.devcontainer/: devcontainer.json
.github/: settings.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_read/: LLM_SUPERINTENDENT.scm  ROADMAP.f0.scm  SPEC.core.scm
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.a2ml  STATE.scm  TRUST.contractile
.well-known/: security.txt
LICENSES/: PMPL-1.0-or-later.txt
_site/: index.html
academic/: README.md  dyadic-design-paper.tex  references.bib
aggregate-library/: README.md
audits/: assail-classifications.a2ml
benches/: binary_size.rs  compile_time.rs  runtime_perf.rs
brand/: BRAND.adoc
conformance/: README.adoc  README.md
docs/: ACADEMIC-REQUIREMENTS.md  BENCHMARKS.md  BOOTSTRAP-STATUS.md  BOOTSTRAP-SUCCESS.md  CLOSURE-OPTIMIZATION.md  DEBUG-SUPPORT.md  GPU-ACCELERATION-ROADMAP.md  HTTP-SERVER-DESIGN.md  INTEGRATION-SUMMARY-2026-01-24.md  LINEAR-COMPILER-DESIGN.md  LINEAR-SEMANTICS.md  LISTS-AND-TUPLES.md  PACKAGE-MANAGER.md  PLAYGROUND-IMPLEMENTATION-SUMMARY.md  PLAYGROUND-REQUIREMENTS.md  README.md  SESSION-2026-01-23-SUMMARY.md  TASKS-COMPLETION-SUMMARY.md  VRAM-CACHE-FORMAL-VERIFICATION.md  proof-debt.adoc  proof-debt.md  tech-debt-2026-05-26.md  testing-and-bench-strategy.adoc  v2-grammar-and-codegen-gaps-2026-06-16.adoc
ephapax-bootstrap/: NOTES.md  README.md  STATUS.md  lexer.eph  main.eph  parser.eph  stdlib.eph  typechecker.eph  wasm_codegen.eph
ephapax-linear/: Cargo.toml  README.md
ephapax-linear/docs/: architecture.md  lexer.md  parser-plan.md
ephapax-linear/grammar/: affine.ebnf  linear.ebnf  solo-v1-grammar.ebnf
ephapax-linear/src/: affine.rs  ast.rs  context.rs  interpreter.rs  lib.rs  linear.rs  parser.rs  tests.rs  type_checker.rs
ephapax-linear/src/tests/: affine.rs  lexer.rs  mod.rs  parser.rs
examples/: README.md  advanced-features.eph  comparison-affine-vs-linear.eph  ephapax-linear-bootstrap.eph  ephapax-linear-v1.eph  hello.eph  linear-core.eph  linear-minimal.eph  linear-proof.eph  linear-simple.eph  linear-v1-simple.eph  pattern_matching.eph  sexpr-parser-simple.eph  sexpr-parser-v2.eph  sexpr-parser.eph  sexpr-tokenize.eph  syntax-guide.eph  system-health.eph  test-if.eph  test-many-functions.eph
formal/: .Makefile.coq.d  .Semantics.aux  .Semantics_admitted.aux  .Syntax.aux  .Typing.aux  .lia.cache  Counterexample.v  Counterexample_L2.v  Counterexample_L2_nested.v  Counterexample_PreservationL1.v  Counterexample_RegionShrink.v  Counterexample_StepPop.v  DESIGN-NOTE-2026-03-28-projected-lookups.md  DESIGN-NOTE-2026-03-28.md  ESCALATION-4.8-leaf-rule-region-liveness.md  (+28 more)
src/ephapax-analysis/: Cargo.toml
src/ephapax-analysis/src/: escape.rs  free_vars.rs  lib.rs  liveness.rs
src/ephapax-cli/: Cargo.toml
src/ephapax-cli/src/: import_resolver.rs  main.rs
src/ephapax-cli/tests/: aspect_tests.rs  cli_verify_ownership.rs  conformance.rs  contract_tests.rs  coproc_surface.rs  eph_corpus_gate.rs  integration.rs  property_tests.proptest-regressions  property_tests.rs  typed_wasm_seam_conformance.rs  v2_grammar_phase_b.rs  v2_grammar_phase_c.rs  v2_grammar_phase_d_aliases.rs  v2_grammar_phase_e.rs  v2_grammar_phase_f.rs  v2_grammar_phase_gh.rs  v2_grammar_phase_i.rs  v2_grammar_phase_j.rs  v2_grammar_phase_k_qualified.rs  v2_stdlib_import.rs  wasm_e2e.rs
src/ephapax-desugar/: Cargo.toml
src/ephapax-desugar/src/: lib.rs
src/ephapax-interp/: Cargo.toml
src/ephapax-interp/src/: lib.rs
src/ephapax-ir/: Cargo.toml
src/ephapax-ir/src/: json.rs  lib.rs
src/ephapax-lexer/: Cargo.toml
src/ephapax-lexer/src/: lib.rs
src/ephapax-lsp/: Cargo.toml
src/ephapax-lsp/src/: main.rs
src/ephapax-meta/: Cargo.toml
src/ephapax-meta/src/: lib.rs
src/ephapax-package/: Cargo.toml
src/ephapax-package/src/: lib.rs  manifest.rs  registry.rs  resolver.rs
src/ephapax-parser/: Cargo.toml
src/ephapax-parser/benches/: parse_bench.rs
src/ephapax-parser/src/: ephapax.pest  error.rs  lib.rs  lists_tuples.rs  surface.rs
src/ephapax-parser/tests/: v2_grammar.rs
src/ephapax-query/: Cargo.toml
src/ephapax-query/src/: lib.rs
src/ephapax-repl/: Cargo.toml
src/ephapax-repl/src/: lib.rs
src/ephapax-runtime/: Cargo.toml
src/ephapax-runtime/src/: lib.rs  list.rs
src/ephapax-stdlib/: Cargo.toml
src/ephapax-stdlib/src/: lib.rs
src/ephapax-surface/: Cargo.toml
src/ephapax-surface/src/: lib.rs
src/ephapax-syntax/: Cargo.toml
src/ephapax-syntax/src/: lib.rs
src/ephapax-tools/: Cargo.toml
src/ephapax-tools/src/: documenter.rs  formatter.rs  lib.rs  linter.rs
src/ephapax-typing/: Cargo.toml
src/ephapax-typing/src/: discipline.rs  lib.rs
src/ephapax-vram-cache/: Cargo.toml  README.md
src/ephapax-vram-cache/benches/: cache_bench.rs
src/ephapax-vram-cache/src/: lib.rs
src/ephapax-wasm/: Cargo.toml
src/ephapax-wasm/src/: carriers.rs  debug.rs  lib.rs  ownership.rs
tests/fuzz/: .gitignore  Cargo.toml  FUZZING_GUIDE.md  README.md  run_fuzz.sh
tests/fuzz/src/: lib.rs
tests/fuzz/src/parse_fuzzer/: lib.rs
tests/fuzz/src/typecheck_fuzzer/: lib.rs
tools/ephapax-dap/: Cargo.toml
tools/ephapax-dap/src/: lib.rs  main.rs
tools/ephapax-lsp/: Cargo.toml
tools/ephapax-lsp/src/: main.rs
(+383 files in other folders)
