# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[workspace]
resolver = "2"
members = [
    "src/ephapax-ir",
    "src/ephapax-syntax",
    "src/ephapax-typing",
    "src/ephapax-wasm",
    "src/ephapax-runtime",
    "src/ephapax-lexer",
    "src/ephapax-parser",
    "src/ephapax-interp",
    "src/ephapax-repl",
    "src/ephapax-cli",
    "src/ephapax-stdlib",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "EUPL-1.2"
authors = ["Jonathan D.A. Jewell"]
repository = "https://github.com/hyperpolymath/ephapax"
keywords = ["linear-types", "memory-safety", "wasm", "compiler"]
categories = ["compilers", "wasm", "memory-management"]

[workspace.dependencies]
# Internal crates
ephapax-syntax = { path = "src/ephapax-syntax" }
ephapax-ir = { path = "src/ephapax-ir" }
ephapax-typing = { path = "src/ephapax-typing" }
ephapax-wasm = { path = "src/ephapax-wasm" }
ephapax-runtime = { path = "src/ephapax-runtime" }
ephapax-lexer = { path = "src/ephapax-lexer" }
ephapax-parser = { path = "src/ephapax-parser" }
ephapax-interp = { path = "src/ephapax-interp" }
ephapax-repl = { path = "src/ephapax-repl" }
ephapax-stdlib = { path = "src/ephapax-stdlib" }

# External dependencies
smol_str = "0.3"
thiserror = "2"
wasm-encoder = "0.221"
logos = "0.14"
chumsky = "1.0.0-alpha.7"
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "2"
rustyline = "14"
