# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[workspace]
resolver = "2"
members = [
    "src/ephapax-ir",
    "src/ephapax-syntax",
    "src/ephapax-typing",
    "src/ephapax-wasm",
    "src/ephapax-runtime",
    "src/ephapax-lexer",
    "src/ephapax-parser",
    "src/ephapax-interp",
    "src/ephapax-repl",
    "src/ephapax-cli",
    "src/ephapax-stdlib",
    "src/ephapax-lsp",
    "src/ephapax-package",
    # "src/ephapax-vram-cache",  # Disabled: requires ephapax-proven repo
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "PMPL-1.0-or-later"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/ephapax"
keywords = ["linear-types", "memory-safety", "wasm", "compiler"]
categories = ["compilers", "wasm", "memory-management"]

[workspace.dependencies]
# Internal crates
ephapax-syntax = { path = "src/ephapax-syntax" }
ephapax-ir = { path = "src/ephapax-ir" }
ephapax-typing = { path = "src/ephapax-typing" }
ephapax-wasm = { path = "src/ephapax-wasm" }
ephapax-runtime = { path = "src/ephapax-runtime" }
ephapax-lexer = { path = "src/ephapax-lexer" }
ephapax-parser = { path = "src/ephapax-parser" }
ephapax-interp = { path = "src/ephapax-interp" }
ephapax-repl = { path = "src/ephapax-repl" }
ephapax-stdlib = { path = "src/ephapax-stdlib" }
ephapax-lsp = { path = "src/ephapax-lsp" }
ephapax-package = { path = "src/ephapax-package" }
ephapax-vram-cache = { path = "src/ephapax-vram-cache" }

# External dependencies
smol_str = "0.3"
thiserror = "2"
wasm-encoder = "0.221"
logos = "0.14"
chumsky = "1.0.0-alpha.7"
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "2"
rustyline = "14"

# Benchmarking dependencies
criterion = { version = "0.5", features = ["html_reports"] }
wasmtime = "27"

# Benchmark binaries
[[bin]]
name = "binary_size"
path = "benches/binary_size.rs"
required-features = []

[dev-dependencies]
criterion.workspace = true
wasmtime.workspace = true
ephapax-syntax.workspace = true
ephapax-typing.workspace = true
ephapax-wasm.workspace = true

[[bench]]
name = "compile_time"
harness = false

[[bench]]
name = "runtime_perf"
harness = false
