# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "ephapax-linear"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "PMPL-1.0-or-later"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/ephapax"
description = "Standalone linear/affine discipline checker for ephapax — dual grammars with full substructural focusing"
keywords = ["linear-types", "affine-types", "substructural", "type-checker"]
categories = ["compilers", "parser-implementations"]

[dependencies]
ephapax-syntax = { path = "../src/ephapax-syntax" }
thiserror = "2"

[dev-dependencies]
