# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "ephapax-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ephapax-syntax.workspace = true
smol_str.workspace = true
thiserror.workspace = true

[dev-dependencies]
