# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "ephapax-cli"
description = "Command-line interface for Ephapax"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ephapax"
path = "src/main.rs"

[dependencies]
ephapax-syntax.workspace = true
ephapax-lexer.workspace = true
ephapax-parser.workspace = true
ephapax-typing.workspace = true
ephapax-wasm.workspace = true
ephapax-interp.workspace = true
ephapax-repl.workspace = true
smol_str.workspace = true
clap.workspace = true
colored.workspace = true
ariadne.workspace = true
