# SPDX-License-Identifier: MPL-2.0
# Owner: Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "ephapax-interp"
description = "Tree-walking interpreter for Ephapax"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ephapax-syntax.workspace = true
ephapax-typing.workspace = true
smol_str.workspace = true
thiserror.workspace = true
libloading = "0.8"
