# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "ephapax-ir"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"

[dependencies]
smol_str = { workspace = true }
thiserror = { workspace = true }
ephapax-syntax = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
