[package]
name = "ephapax-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Language Server Protocol implementation for Ephapax"

[dependencies]
ephapax-syntax = { path = "../ephapax-syntax" }
ephapax-parser = { path = "../ephapax-parser" }
ephapax-typing = { path = "../ephapax-typing" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
smol_str = "0.3"

[dev-dependencies]
tokio-test = "0.4"
