# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "ephapax-package"
description = "Package manager for the Ephapax language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ephapax-syntax = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = { workspace = true }
semver = "1.0"
indexmap = "2"
git2 = "0.19"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"
home = "0.5"

[dev-dependencies]
tempfile = "3"
