# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "ephapax-parser"
description = "Parser for the Ephapax programming language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ephapax-syntax = { workspace = true }
ariadne = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
