# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "ephapax-repl"
description = "Read-Eval-Print Loop for Ephapax"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ephapax-syntax.workspace = true
ephapax-lexer.workspace = true
ephapax-parser.workspace = true
ephapax-typing.workspace = true
ephapax-interp.workspace = true
smol_str.workspace = true
rustyline.workspace = true
colored.workspace = true
