# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "ephapax-syntax"
description = "Abstract syntax tree and type definitions for the Ephapax language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
smol_str = { workspace = true }
