# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "ephapax-tools"
description = "Linter, formatter, and documenter for the Ephapax language"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ephapax-syntax = { workspace = true }
ephapax-parser = { workspace = true }
