# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "ephapax-vram-cache"
description = "GPU-accelerated IR caching for Ephapax compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Formally verified LRU cache (Proven library)
ephapax-proven = { version = "0.1", path = "/var/mnt/eclipse/repos/ephapax-proven" }

# GPU acceleration
cudarc = { version = "0.12", features = ["std"], optional = true }
wgpu = { version = "22", optional = true }

# Hashing and serialization
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Error handling
thiserror.workspace = true

# Utilities
smol_str.workspace = true

[features]
default = ["cuda"]
cuda = ["dep:cudarc"]
webgpu = ["dep:wgpu"]
# Fallback to RAM cache if no GPU
cpu-fallback = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cache_bench"
harness = false
