# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "ephapax-wasm"
description = "WebAssembly code generator for the Ephapax language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ephapax-syntax = { workspace = true }
ephapax-ir = { workspace = true }
wasm-encoder = { workspace = true }
gimli = { version = "0.31", features = ["write"] }
object = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wasmparser = "0.221"
