# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "ephapax-wasm"
description = "WebAssembly code generator for the Ephapax language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ephapax-syntax = { workspace = true }
ephapax-ir = { workspace = true }
smol_str = { workspace = true }
wasm-encoder = { workspace = true }
gimli = { version = "0.31", features = ["write"] }
object = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NOTE: this crate intentionally does NOT depend on `typed-wasm-verify`.
# Ephapax owns its own copy of the `typedwasm.ownership` section codec
# in `src/ownership.rs`. Ownership annotations are ephapax's own
# discipline (linear types); `typed-wasm-verify` is an optional
# post-codegen verifier consumed only by `ephapax-cli` behind a
# feature flag. See `src/ownership.rs` header for the full rationale.

[dev-dependencies]
wasmparser = "0.221"
proptest = { workspace = true }
